2005-09-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-scrsaver.c: (screensaver_inhibit_dbus): fix wording in
	the reason for disabling the screensaver

2005-09-15  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_seek_time): only send an EOS when reaching past
	the end of the current stream *and* not playing a DVD or VCD
	This fixes playback stopping when trying to skip the FBI warning, or
	such on DVDs

2005-09-15  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (totem_action_handle_key),
	(update_media_menu_items): Add menu item to switch angles

2005-09-14  Johan Dahlin  <johan@gnome.org>

	reviewed by: Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
	
	* src/totem-playlist.c: (totem_playlist_set_playing): Scroll
	to the current song when playing it.

2005-09-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: Remove plenty of debug spew
	(Closes: #314113)

2005-09-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_signal_idler), (got_found_tag):
	Ref the source in the got_found_tag, and unref it in the idle
	signal handler (Closes: #314803), thanks to Jan Schmidt
	<thaytan@mad.scientist.com> for the hint

2005-09-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (popup_timeout_add), (on_mouse_click_fullscreen),
	(on_video_motion_notify_event): patch from Wouter Bolsterlee 
	<uws+gnome@xs4all.nl> to simplify the popup timeout code
	(Closes: #316122)

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: Don't change a variable in the configure.in after
	it's been AC_SUBST'ed, hardcode the D-Bus warning instead, fixes
	the build when the Mozilla plugin is enabled (Closes: #315864)

2005-09-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: avoid passing undefined data to
	gnome_vfs_mime_get_description (Closes: #315911)
